kube-config/blogpiece-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: blog-service
spec:
  selector:
    run: blog-service
  ports:
      -name: port1
      protocol: TCP
      port: 8080
      targetPort: http
      -name: port2
      protocol: TCP
      port: 27017
      targetPort: http
  type: NodePort
